; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_do_set_user_lang.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_do_set_user_lang.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_langs = type { i32* }

@MAX_LANGS = common dso_local global i32 0, align 4
@LEV_TARG_LANG_ADD = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_set_user_lang(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.lev_langs*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32* @get_user(i32 %8)
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %19

12:                                               ; preds = %2
  %13 = load i32, i32* %5, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %19, label %15

15:                                               ; preds = %12
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* @MAX_LANGS, align 4
  %18 = icmp sge i32 %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %15, %12, %2
  store i32 0, i32* %3, align 4
  br label %35

20:                                               ; preds = %15
  %21 = load i64, i64* @LEV_TARG_LANG_ADD, align 8
  %22 = add nsw i64 %21, 1
  %23 = load i32, i32* %4, align 4
  %24 = call %struct.lev_langs* @alloc_log_event(i64 %22, i32 12, i32 %23)
  store %struct.lev_langs* %24, %struct.lev_langs** %7, align 8
  %25 = load i32, i32* %5, align 4
  %26 = load %struct.lev_langs*, %struct.lev_langs** %7, align 8
  %27 = getelementptr inbounds %struct.lev_langs, %struct.lev_langs* %26, i32 0, i32 0
  %28 = load i32*, i32** %27, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 0
  store i32 %25, i32* %29, align 4
  %30 = load i32*, i32** %6, align 8
  %31 = load %struct.lev_langs*, %struct.lev_langs** %7, align 8
  %32 = getelementptr inbounds %struct.lev_langs, %struct.lev_langs* %31, i32 0, i32 0
  %33 = load i32*, i32** %32, align 8
  %34 = call i32 @add_langs(i32* %30, i32* %33, i32 1)
  store i32 %34, i32* %3, align 4
  br label %35

35:                                               ; preds = %20, %19
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32* @get_user(i32) #1

declare dso_local %struct.lev_langs* @alloc_log_event(i64, i32, i32) #1

declare dso_local i32 @add_langs(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
